--- a/lottoprogram/LotterySimulation.csproj
+++ b/lottoprogram/LotterySimulation.csproj
@@ -6,8 +6,8 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{068C03C8-5483-4DB5-8105-DD4F3CF27416}</ProjectGuid>
     <OutputType>WinExe</OutputType>
-    <RootNamespace>LotterySimulator</RootNamespace>
-    <AssemblyName>LotterySimulator</AssemblyName>
+    <RootNamespace>LotterySimulation</RootNamespace>
+    <AssemblyName>LotterySimulation</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -48,7 +48,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup>
-    <StartupObject>LotterySimulator.Program</StartupObject>
+    <StartupObject>LotterySimulation.Program</StartupObject>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
@@ -64,16 +64,16 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="MainForm.cs">
+    <Compile Include="LotterySimulationForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="MainForm.Designer.cs">
-      <DependentUpon>MainForm.cs</DependentUpon>
+    <Compile Include="LotterySimulationForm.Designer.cs">
+      <DependentUpon>LotterySimulationForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="MainForm.resx">
-      <DependentUpon>MainForm.cs</DependentUpon>
+    <EmbeddedResource Include="LotterySimulationForm.resx">
+      <DependentUpon>LotterySimulationForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
