--- a/miniräknare/Calculator.csproj
+++ b/miniräknare/Calculator.csproj
@@ -49,6 +49,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="model\BinaryOperator.cs" />
     <Compile Include="model\Calculation.cs" />
     <Compile Include="CalculatorForm.cs">
       <SubType>Form</SubType>
@@ -57,7 +58,7 @@
       <DependentUpon>CalculatorForm.cs</DependentUpon>
     </Compile>
     <Compile Include="model\ICalculationChangedObserver.cs" />
-    <Compile Include="model\IOperator.cs" />
+    <Compile Include="model\Operator.cs" />
     <Compile Include="model\Operand.cs" />
     <Compile Include="model\operators\AdditionOperator.cs" />
     <Compile Include="model\operators\DivisionOperator.cs" />
@@ -65,6 +66,7 @@
     <Compile Include="model\operators\MultiplicationOperator.cs" />
     <Compile Include="model\operators\RootExtractionOperator.cs" />
     <Compile Include="model\operators\SubtractionOperator.cs" />
+    <Compile Include="model\UnaryOperator.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="CalculatorForm.resx">
