--- a/miniräknare/Calculator.csproj
+++ b/miniräknare/Calculator.csproj
@@ -57,6 +57,7 @@
     <Compile Include="CalculatorForm.Designer.cs">
       <DependentUpon>CalculatorForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="model\IArithmeticExceptionObserver.cs" />
     <Compile Include="model\ICalculationChangedObserver.cs" />
     <Compile Include="model\Operator.cs" />
     <Compile Include="model\Operand.cs" />
