--- a/miniräknare/Calculator.csproj
+++ b/miniräknare/Calculator.csproj
@@ -60,6 +60,7 @@
     <Compile Include="model\IArithmeticExceptionObserver.cs" />
     <Compile Include="model\ICalculationChangedObserver.cs" />
     <Compile Include="model\Operator.cs" />
+    <Compile Include="model\Operand.cs" />
     <Compile Include="model\operators\AdditionOperator.cs" />
     <Compile Include="model\operators\DivisionOperator.cs" />
     <Compile Include="model\operators\PowerOfTwoOperator.cs" />
